--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is PharmEasy Project ",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
