--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "project",
   "version": "1.0.0",
-  "description": "This is PharmEasy Project ",
+  "description": "This is Social Project ",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon index.js"
+"start":"node index.js",
+"dev":"nodemon index.js"
   },
   "author": "",
   "license": "ISC",
